--- a/docs/approach.tex
+++ b/docs/approach.tex
@@ -106,7 +106,8 @@ complicated approach, possibly allowing it to propagate further.
 \subsection{Analyse Experimental Data}
 \label{sec:analyse-data}
 
-List of strains of known fitness??
+List of strains of known fitness??\\
+Specifically what machines do we use for computation?\\
 
 We will investigate unpublished QFA and SGA data for the model
 organism \textit{S. Cerevisiae}. Some data (Figure~\ref{fig:gaps}),
@@ -237,7 +238,10 @@ We may also remove either signalling or competition for nutreints from
 our model entirely if no effect is found. Ultimately, if neither effect
 is discovered we may reject our initial hypothesis and accept that
 growth is independent.
-
+\\\\
+** Probably being too speculative here and could move some of this to
+the background
+\\
 We also intend to determine the effect of competition on the different
 measures of fitness discussed in section
 \ref{sec:genetic-interaction}. In previous studies, which use fits of
@@ -250,6 +254,8 @@ are larger (and have grown for longer). If it is possible to relate
 parameters in our model to those of the independent logistic model
 (\ref{eq:1}) we will carry out this comparison. ?Conor, you said you
 might have done this previously?
+\\
+**
 
 
 \subsection{Compare Experimental Designs}
