Add refs for comp and signalling

--- a/docs/proposal.bib
+++ b/docs/proposal.bib
@@ -181,6 +181,18 @@ journal = {Bioinformatics}
 }
 
 
+@article{fujita2006,
+  title={The genome-wide screening of yeast deletion mutants to identify the genes required for tolerance to ethanol and other alcohols},
+  author={Fujita, Katsuhide and Matsuyama, Akinobu and Kobayashi, Yoshinori and Iwahashi, Hitoshi},
+  journal={FEMS yeast research},
+  volume=6,
+  number=5,
+  pages={744--750},
+  year=2006,
+  publisher={The Oxford University Press}
+}
+
+
 @article {Heydari2016,
 author = {Heydari, Jonathan and Lawless, Conor and Lydall, David A. and Wilkinson, Darren J.},
 title = {Bayesian hierarchical modelling for inferring genetic interactions in yeast},
@@ -215,6 +227,18 @@ abstract = {Quantitative fitness analysis (QFA) is a high throughput
 }
 
 
+@article{honigberg2011,
+  title={Cell signals, cell contacts, and the organization of yeast communities},
+  author={Honigberg, Saul M},
+  journal={Eukaryotic cell},
+  volume={10},
+  number={4},
+  pages={466--473},
+  year={2011},
+  publisher={Am Soc Microbiol}
+}
+
+
 @article{Lawless2010,
 abstract = {High-throughput screens comparing growth rates of arrays
                   of distinct micro-organism cultures on solid agar
@@ -243,6 +267,28 @@ volume = 11,
 year = 2010
 }
 
+@article{palkova1997,
+  title={Ammonia mediates communication between yeast colonies},
+  author={Palkov{\'a}, Zdena and Janderov{\'a}, Blanka and Zik{\'a}nov{\'a}, Blanka and Posp{\'\i}{\^s}ek, Martin and Forstov{\'a}, Jitka and others},
+  journal={Nature},
+  volume=390,
+  number=6659,
+  pages={532--536},
+  year=1997,
+  publisher={Nature Publishing Group}
+}
+
+@article{palkova2003,
+  title={Ammonia signaling in yeast colony formation},
+  author={Palkov{\'a}, Zdena and V{\'a}chov{\'a}, Libu{\v{s}}e},
+  journal={International review of cytology},
+  volume=225,
+  pages={229--272},
+  year=2003,
+  publisher={Elsevier}
+}
+
+
 @Misc{SciPy,
   author =    {Eric Jones and Travis Oliphant and Pearu Peterson and others},
   title =     {{SciPy}: Open source scientific tools for {Python}},
@@ -250,6 +296,18 @@ year = 2010
   url = "http://www.scipy.org/",
   note = {[Online; accessed 2016-04-08]}
 }
+
+@article{sprague2006,
+  title={Eukaryotes learn how to count: quorum sensing by yeast},
+  author={Sprague, George F and Winans, Stephen C},
+  journal={Genes \& development},
+  volume=20,
+  number=9,
+  pages={1045--1049},
+  year=2006,
+  publisher={Cold Spring Harbor Lab}
+}
+
 
 @article{Verhulst1845,
 author = {Verhulst, P.F.},
